# bossanova

./: .gitignore  README.md  bossanova.cabal  brutal-netwire.cabal  brutal-netwire.manifest  cabal-force  cabal.project  profile
apps/: Barber.hs  Charles1.hs  Seagull.hs
resources/: raw_sprites.psd
resources/anims/: blackBird.json  player.json  projectile.json  rocks.png.txt  snail.json  sun.json
resources/anims/barber/: biker_attack.json  biker_idle.json  biker_run.json
src/: Animation.hs  Art.hs  Callbacks.hs  Charles1.hs  Components.hs  Entities.hs  Events.hs  Foundations.lhs  Input.hs  Particles.hs  Physics.hs  Seagull.hs  Settings.hs  Systems.hs  Types.hs  Utils.hs  Wires.hs
