name:                brutal-netwire
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable foundations
  main-is: src/Foundations.lhs
  build-depends:
      base >= 4 && < 5,
      netwire >= 5.0.0 && < 5.0.1

executable charles1
  main-is: src/Charles1.hs
  build-depends:
      base >= 4 && < 5,
      netwire >= 5.0.0 && < 5.0.1,
      SFML >= 0.2.0.0,
      SFML-control >= 0.2.0.0,
      lens,
      transformers,
      containers
