name:                brutal-netwire
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

executable foundations
  main-is: src/Foundations.lhs
  build-depends:
      base >= 4 && < 5,
      netwire >= 5.0.0 && < 5.0.1

executable charles1
  main-is: Charles1.hs
  hs-source-dirs: src
  other-modules:
    Components
    Entities
    Types
    Wires
  build-depends:
      base >= 4 && < 5,
      parallel >= 3.2.0.4,
      netwire >= 5.0.0 && < 5.0.1,
      SFML >= 0.2.0.0,
      SFML-control >= 0.2.0.2,
      lens,
      time,
      linear,
      vector,
      data-default,
      random,
      transformers,
      containers,
      stm,
      safe,
      Hipmunk,
      StateVar
