name:                brutal-netwire
version:             0.1.0.1
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.8

flag profile
  default: False

flag eventlog
  default: False

executable foundations
  main-is: src/Foundations.lhs
  build-depends:
      base >= 4 && < 5,
      netwire >= 5.0.0 && < 5.0.4

executable charles1
  main-is: Charles1.hs
  hs-source-dirs: src
  build-depends:
      base >= 4 && < 5,
      parallel >= 3.2.0.4,
      netwire >= 5.0.0 && < 5.0.4,
      SFML >= 0.2.0.0 && < 2.4,
      SFML-control >= 0.2.0.2,
      text >= 0.11,
      lens,
      aeson,
      lens-aeson,
      bytestring,
      time,
      linear,
      vector,
      data-default,
      random,
      transformers,
      containers,
      stm,
      safe,
      Hipmunk,
      StateVar,
      async,
      parallel

  ghc-options:
    -threaded
    -O2
    "-with-rtsopts=-N"

  if flag(profile)
    ghc-options:
      -threaded
      -O2
      -auto-all
      -caf-all
      -rtsopts
      "-with-rtsopts=-N -p -hc"

  if flag(eventlog)
    ghc-options:
      -threaded
      -O2
      -eventlog
      "-with-rtsopts=-N -ls"


executable seagull
  main-is: Seagull.hs
  hs-source-dirs: src

  build-depends:
      base >= 4 && < 5,
      parallel >= 3.2.0.4,
      netwire >= 5.0.0 && < 5.0.4,
      SFML >= 0.2.0.0 && < 2.4,
      SFML-control >= 0.2.0.2,
      text >= 0.11,
      lens,
      aeson,
      lens-aeson,
      bytestring,
      time,
      linear,
      vector,
      data-default,
      random,
      transformers,
      containers,
      stm,
      safe,
      Hipmunk,
      StateVar,
      async,
      parallel

  ghc-options:
    -threaded
    -O2
    "-with-rtsopts=-N"

  if flag(profile)
    ghc-options:
      -threaded
      -O2
      -auto-all
      -caf-all
      -rtsopts
      "-with-rtsopts=-N -p -hc"

  if flag(eventlog)
    ghc-options:
      -threaded
      -O2
      -eventlog
      "-with-rtsopts=-N -ls"

